@@ -17,7 +17,7 @@ buildscript {
 
 apply plugin: 'forge'
 
-version = "a1.0-11"
+version = "a1.0-12"
 group= "luckycoins" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = "LuckyCoins"
 
